--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build && node dist/app.js",
+    "lint": "./node_modules/.bin/eslint server --fix",
     "clean": "rm -rf dist",
     "build": "npm run clean && mkdir dist && babel server -s -d dist"
   },
