--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Store Manager is a web application that allows store owners to manage product sales, inventory and \r records",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "export current_env=test || SET \"current_env=test\" && npm run build && nyc mocha dist/test/*.test.js --exit --timeout=20000",
     "start": "npm run build && node dist/app.js",
     "lint": "./node_modules/.bin/eslint server --fix",
     "clean": "rm -rf dist",
@@ -28,5 +28,11 @@
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "expect": "^23.6.0",
+    "mocha": "^5.2.0",
+    "nyc": "^13.0.1",
+    "supertest": "^3.3.0"
   }
 }
