ch(Setup test reporters for coveralls and codeclimate)

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,13 @@ node_js:
   - "stable"
 scripts:
   - "npm test"
+env:
+  global:
+    - CC_TEST_REPORTER_ID=85aa67068a7b1b7c0bf126082b507a94a63774f6c10c3e46333cc9a54b0f72df
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+after_success: npm run coverage
