--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - "10.11.0"
+  - "stable"
 env:
   - CC_TEST_REPORTER_ID=76baaee499b529e48f09b8bbe25ea600d2cfa6642ee18bed78678558c1b4c226
 addons:
@@ -11,6 +11,6 @@ before_script:
   - ./cc-test-reporter before-build
 scripts:
   - "npm test"
-after_success: 
+after_script: 
   - npm run coverage
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
