ch(create table schema)

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "pg": "^7.5.0"
   },
   "devDependencies": {
     "coveralls": "^3.0.2",
