--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-register": "^6.26.0",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "pg": "^7.5.0",
     "validator": "^10.8.0"
