--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "app.js",
   "scripts": {
     "test": "export current_env=test || SET \"current_env=test\" && npm run build && nyc --reporter=lcov --reporter=text --cache mocha dist/test/*.test.js --exit --timeout=20000",
+    "test-dev": "export current_env=test || SET \"current_env=test\" && npm run test-tables-setup && npm run build && nyc --reporter=lcov --reporter=text --cache mocha dist/test/*.test.js --exit --timeout=20000",
     "start": "npm run build && node dist/app.js",
     "lint": "./node_modules/.bin/eslint server --fix",
     "clean": "rm -rf dist",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "build": "npm run clean && mkdir dist && babel server -s -d dist",
-    "tables-setup": "psql -U postgres -f server/models/tables-setup.sql"
+    "tables-setup": "psql -U postgres -f server/models/tables-setup.sql",
+    "test-tables-setup": "psql -U postgres -f server/models/tables-setup.sql"
   },
   "repository": {
     "type": "git",
