--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
-    "bcrypt": "^3.0.2",
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
@@ -46,6 +46,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "expect": "^23.6.0",
+    "jsonwebtoken": "^8.3.0",
     "mocha": "^5.2.0",
     "nyc": "^13.0.1",
     "supertest": "^3.3.0"
