ch(add test for add-to-cart route)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test-dev": "export current_env=test || SET \"current_env=test\" && npm run build && nyc --reporter=lcov --reporter=text --cache mocha dist/test/*.test.js --exit --timeout=20000",
-    "test": "export current_env=test || SET \"current_env=test\" && npm run test-tables-setup && npm run build && nyc --reporter=lcov --reporter=text --cache mocha dist/test/*.test.js --exit --timeout=20000",
+    "test": "export current_env=test || SET \"current_env=test\" && npm run test-tables-setup && npm run build && nyc --reporter=lcov --reporter=text --cache mocha dist/test/*.test.js --sort --exit --timeout=20000",
     "start": "npm run build && node dist/app.js",
     "lint": "./node_modules/.bin/eslint server --fix",
     "clean": "rm -rf dist",
