--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "build": "npm run clean && mkdir dist && babel server -s -d dist",
     "tables-setup": "psql -U postgres -f server/models/tables-setup.sql",
-    "test-tables-setup": "psql -U postgres -f server/models/test-tables-setup.sql"
+    "test-tables-setup": "psql -U postgres -f server/models/test-tables-setup.sql",
+    "heroku-db-tables-setup": "heroku pg:psql -f server/models/heroku-db-setup.sql"
   },
   "repository": {
     "type": "git",
