--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
     "pg": "^7.5.0",
+    "swagger-ui-express": "^4.0.1",
     "validator": "^10.8.0"
   },
   "devDependencies": {
