--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "export current_env=test || SET \"current_env=test\" && npm run test-tables-setup && npm run build && nyc --reporter=lcov --reporter=text --cache mocha dist/test/*.test.js --sort --exit --timeout=20000",
     "start": "npm run build && node dist/app.js",
     "lint": "./node_modules/.bin/eslint server --fix",
+    "lint-scripts": "./node_modules/.bin/eslint UI --fix",
     "clean": "rm -rf dist",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "build": "npm run clean && mkdir dist && babel server -s -d dist",
