ch(change .travis.yml config)

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   global:
   - CC_TEST_REPORTER_ID=76baaee499b529e48f09b8bbe25ea600d2cfa6642ee18bed78678558c1b4c226
 addons:
-  chrome: stable
+  postgresql: "9.4"
 services:
   - postgresql
 before_script:
