--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "extends": "airbnb",
      "root": true,
      "rules": {
-       "no-console":"off"
+       "no-console":"off",
+       "no-param-reassign": [2, { "props": false }]
     },
     "env": {
     "node": true,
