--- a/package.json
+++ b/package.json
@@ -30,29 +30,28 @@
   },
   "homepage": "https://github.com/rajeman/Store-Manager#readme",
   "dependencies": {
+    "@babel/core": "^7.2.2",
     "babel-cli": "^6.26.0",
     "babel-core": "6.25.0",
+    "babel-loader": "7.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "css-loader": "^2.0.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "file-loader": "^3.0.1",
     "jsonwebtoken": "^8.3.0",
-    "pg": "^7.5.0",
-    "swagger-ui-express": "^4.0.1",
-    "validator": "^10.8.0",
-    "@babel/core": "^7.2.2",
-    "babel-loader": "7.1.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^2.0.1",
     "live-server": "^1.2.1",
     "node-sass": "^4.11.0",
     "normalize.css": "7.0.0",
+    "pg": "^7.5.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-modal": "^3.7.1",
@@ -61,7 +60,10 @@
     "redux": "^4.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "swagger-ui-express": "^4.0.1",
+    "url-loader": "^1.1.2",
     "uuid": "^3.3.2",
+    "validator": "^10.8.0",
     "webpack": "^4.27.1",
     "webpack-dev-server": "^3.1.10"
   },
