--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/rajeman/Store-Manager#readme",
   "dependencies": {
     "@babel/core": "^7.2.2",
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
@@ -58,6 +59,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "4.2.2",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "swagger-ui-express": "^4.0.1",
