--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
+    "history": "^4.7.2",
     "jsonwebtoken": "^8.3.0",
     "live-server": "^1.2.1",
     "node-sass": "^4.11.0",
