--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "history": "^4.7.2",
+    "image-loader": "0.0.1",
     "jsonwebtoken": "^8.3.0",
     "live-server": "^1.2.1",
     "node-sass": "^4.11.0",
@@ -58,6 +59,7 @@
     "react-dom": "^16.6.3",
     "react-modal": "^3.7.1",
     "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
     "react-router-dom": "4.2.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
