--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "4.2.2",
+    "react-toastify": "^4.5.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
