--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test-dev": "export current_env=test || SET \"current_env=test\" && npm run build && nyc --reporter=lcov --reporter=text --cache mocha dist/test/*.test.js --exit --timeout=20000",
     "test": "export current_env=test || SET \"current_env=test\" && npm run test-tables-setup && npm run build && nyc --reporter=lcov --reporter=text --cache mocha dist/test/*.test.js --sort --exit --timeout=20000",
+    "test-jest": "jest .jest.test.js",
     "start": "npm run build && node dist/app.js",
     "lint": "./node_modules/.bin/eslint server --fix",
     "lint-scripts": "./node_modules/.bin/eslint UI --fix",
@@ -50,6 +51,7 @@
     "file-loader": "^3.0.1",
     "history": "^4.7.2",
     "image-loader": "0.0.1",
+    "jest": "^23.6.0",
     "jsonwebtoken": "^8.3.0",
     "live-server": "^1.2.1",
     "node-sass": "^4.11.0",
