--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test-dev": "export current_env=test || SET \"current_env=test\" && npm run build && nyc --reporter=lcov --reporter=text --cache mocha dist/test/*.test.js --exit --timeout=20000",
     "test": "export current_env=test || SET \"current_env=test\" && npm run test-tables-setup && npm run build && nyc --reporter=lcov --reporter=text --cache mocha dist/test/*.test.js --sort --exit --timeout=20000",
-    "test-jest": "jest .jest.test.js",
+    "test-jest": "jest --config=jest.config.json .jest.test.js",
     "start": "npm run build && node dist/app.js",
     "lint": "./node_modules/.bin/eslint server --fix",
     "lint-scripts": "./node_modules/.bin/eslint UI --fix",
@@ -47,6 +47,8 @@
     "cors": "^2.8.4",
     "css-loader": "^2.0.1",
     "dotenv": "^6.1.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "history": "^4.7.2",
@@ -57,12 +59,14 @@
     "node-sass": "^4.11.0",
     "normalize.css": "7.0.0",
     "pg": "^7.5.0",
+    "raf": "^3.4.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-modal": "^3.8.1",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "4.2.2",
+    "react-test-renderer": "^16.7.0",
     "react-toastify": "^4.5.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
