--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "css-loader": "^2.0.1",
     "dotenv": "^6.1.0",
     "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-adapter-react-16": "^1.8.0",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "history": "^4.7.2",
@@ -80,13 +80,14 @@
     "webpack-dev-server": "^3.1.10"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "coveralls": "^3.0.2",
     "eslint": "^5.7.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react": "^7.12.4",
     "expect": "^23.6.0",
     "mocha": "^5.2.0",
     "nyc": "^13.0.1",
