add jest config

--- a/jest.config.json
+++ b/jest.config.json
@@ -2,5 +2,6 @@
     "setupFIles": [
         "raf/polyfill",
         "<rootDir>/src/tests/setupTests.js"
-    ]
+    ],
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
 }
