--- a/package.json
+++ b/package.json
@@ -4,18 +4,7 @@
   "description": "Store Manager is a web application that allows store owners to manage product sales, inventory and \r records",
   "main": "app.js",
   "scripts": {
-    "test-dev": "export current_env=test || SET \"current_env=test\" && npm run build && nyc --reporter=lcov --reporter=text --cache mocha dist/test/*.test.js --exit --timeout=20000",
-    "test": "export current_env=test || SET \"current_env=test\" && npm run test-tables-setup && npm run build && nyc --reporter=lcov --reporter=text --cache mocha dist/test/*.test.js --sort --exit --timeout=20000",
-    "test-jest": "jest --config=jest.config.json .jest.test.js",
-    "start": "npm run build && node dist/app.js",
-    "lint": "./node_modules/.bin/eslint server --fix",
-    "lint-scripts": "./node_modules/.bin/eslint UI --fix",
-    "clean": "rm -rf dist",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "build": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
-    "tables-setup": "psql -U postgres -f server/models/tables-setup.sql",
-    "test-tables-setup": "psql -U postgres -f server/models/test-tables-setup.sql",
-    "heroku-db-tables-setup": "heroku pg:psql -f server/models/heroku-db-setup.sql",
+    "test": "jest --config=jest.config.json .jest.test.js",
     "serve": "live-server public/",
     "build-pack": "webpack --watch",
     "dev-server": "webpack-dev-server"
@@ -49,6 +38,7 @@
     "dotenv": "^6.1.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
+    "enzyme-to-json": "^3.3.5",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "history": "^4.7.2",
