--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Store Manager is a web application that allows store owners to manage product sales, inventory and \r records",
   "main": "app.js",
   "scripts": {
-    "test": "jest --config=jest.config.json .jest.test.js",
+    "test": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "serve": "live-server public/",
     "build-pack": "webpack --watch",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "test:dev": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -71,7 +73,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "coveralls": "^3.0.2",
+    "coveralls": "^3.0.3",
     "eslint": "^5.7.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -80,7 +82,6 @@
     "eslint-plugin-react": "^7.12.4",
     "expect": "^23.6.0",
     "mocha": "^5.2.0",
-    "nyc": "^13.0.1",
     "supertest": "^3.3.0",
     "webpack-cli": "^3.1.2"
   },
