--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-test-renderer": "^16.7.0",
     "react-toastify": "^4.5.1",
     "redux": "^4.0.1",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
