fix hardoced env in prod

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "test:dev": "jest --coverage",
     "build:prod": "webpack -p --env=production",
-    "start": "node server/server.js",
+    "start": "npm run build:prod && node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
   "repository": {
